# mirin-lang

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  first-pass-plan.md  tree-sitter.json
.claude/: settings.json
.githooks/: pre-commit
.github/: copilot-instructions.md
docs/: AGENTS.md
examples/: accumulator.plr  add_constant.plr  counter.plr  delay.plr  impl_examples.plr  mult_add.plr  packet_struct.plr  parameterized_port.plr  parameterized_struct.plr  pipeline.plr  shift_register.plr  simple_port.plr  test.plr
fail-examples/: duplicate-def.plr  duplicate-var.plr  missing-parenthesis.plr  missing-port-comma.plr  missing-semicolon.plr  missing-struct-colon.plr  source-arrow-on-fn-param.plr  sv-reserved-word.plr  undefined-name.plr  unknown-named-arg.plr  var-after-let.plr
planning/: aggregate_domains.md  bits.md  compiler_architecture.md  comptime_if.md  const_eval.md  cycles_and_scoping.md  domain_checking.md  domain_checking_redux.md  for_loops.md  high_level_design.md  hir.md  impl.md  inline_bodies.md  inline_verilog.md  ir_pipeline.md  known_issues.md  lsp.md  mir.md  mir_progress.md  modules.md  mono_check.md  numeric_literals.md  operators.md  pack_resize.md  parametricity.md  port_connections.md  q3_typed_hir.md  q4_const_eval.md  q5_backend.md  q7_terms_and_domains.md  query_engine.md  return_variable.md  slice_guards.md  slicing.md  structs_and_ports.md  structs_as_ports.md  surface_ir_discussion.md  syntax.md  system_verilog_backend.md  tasks.md  (+7 more)
polar/: Cargo.toml
proposals/: Whos_who_in_the_type_zoo.md  compile_mutable.md  const_net_duality.md  param_const.md  vendor_ip_simulation.md  view.md  when_binding.md
scripts/: install-tooling.sh
src/: lib.rs
tests/rtl/: README.md  (+17 more)
todo-examples/: README.md  impl_examples.plr  parameterized_port.plr
tree-sitter-polar/: CMakeLists.txt  Cargo.toml  Makefile  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
tree-sitter-polar/bindings/c/: tree-sitter-polar.pc.in
tree-sitter-polar/bindings/node/: index.js
tree-sitter-polar/bindings/python/tree_sitter_polar/: __init__.py
tree-sitter-polar/bindings/rust/: build.rs
tree-sitter-polar/queries/: highlights.scm  injections.scm  tags.scm
tree-sitter-polar/src/: grammar.json  node-types.json  parser.c
tree-sitter-polar/test/corpus/: function_tests.txt
(+330 files in other folders)
