[package]
description = "Polar grammar for tree-sitter"
name = "tree-sitter-polar"
version = "0.1.0"
# version = "0.24.0"
# authors = [
#   "Max Brunsfeld <maxbrunsfeld@gmail.com>",
#   "Amaan Qureshi <amaanq12@gmail.com>",
# ]
license = "MIT"
# readme = "README.md"
categories = ["parsing", "text-editors"]
keywords = ["incremental", "parsing", "tree-sitter", "polar"]
# repository = "https://github.com/tree-sitter/tree-sitter-rust"
autoexamples = false
edition = "2024"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[build-dependencies]
cc = "1.2.22"

[dependencies]
tree-sitter = "0.25.4"
